TestSuite/errors/err0206.pas
function f<T>(): integer;
begin
end;

begin
  var ttt := f; // падает!
end.